--- a/app/src/main/res/layout/fragment_settings_account.xml
+++ b/app/src/main/res/layout/fragment_settings_account.xml
@@ -5,62 +5,86 @@
     android:padding="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+    <Button
+        android:id="@+id/btnMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="更多"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <ImageView
         android:id="@+id/ivAvator"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
     <TextView
-        android:id="@+id/tvNickname"
+        android:id="@+id/tvTitleSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@android:color/black"
-        android:text="欢迎您！"
+        android:text="账号设置"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintTop_toBottomOf="@+id/ivAvator"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:padding="15dp"/>
-    <Button
-        android:id="@+id/btnStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:background="#00000000"
-        android:text="开始使用"
-        app:layout_constraintTop_toBottomOf="@+id/tvNickname"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"/>
     <TextView
-        android:id="@+id/tvSettings"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSettings1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FF808080"
         android:textSize="22sp"
         android:textColor="@android:color/black"
-        android:text="设置"
+        android:text="设置1"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleSettings"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:padding="15dp"/>
     <TextView
-        android:id="@+id/tvDeepLink1"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSettings2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFABABAB"
         android:textSize="22sp"
         android:textColor="@android:color/black"
-        android:text="显示深层链接"
+        android:text="设置2"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSettings1"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="15dp"/>
+    <TextView
+        android:id="@+id/tvSettings3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFE0E0E0"
+        android:textSize="22sp"
+        android:textColor="@android:color/black"
+        android:text="设置3"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toBottomOf="@+id/tvSettings2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:padding="15dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
