--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/nav_graph_login"
     app:startDestination="@id/homeFragment">
 
     <fragment
@@ -13,6 +13,19 @@
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@+id/loginFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" >
+            <argument
+                android:name="type"
+                app:argType="integer"
+                android:defaultValue="0"
+                app:nullable="false"/>
+        </action>
+        <action
+            android:id="@+id/action_home_to_settings"
+            app:destination="@+id/Settings"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -38,4 +51,86 @@
         android:label="RegisterFragment"
         tools:layout="@layout/fragment_register">
     </fragment>
+
+
+    <!-- 注意：引入导航图资源使用@navigation -->
+<!--    <include app:graph="@navigation/nav_graph_settings" />-->
+
+    <navigation android:id="@+id/Settings"
+        android:label="Settings"
+        app:startDestination="@id/settingsFragment">
+
+        <!-- 全局操作，在navigation标签下声明，目的地必须是当前导航图下的目的或者子导航图入口 -->
+        <action
+            android:id="@+id/action_to_settings_more"
+            app:destination="@+id/commonFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+
+        <fragment
+            android:id="@+id/settingsFragment"
+            android:name="com.owen.navigationdemo.SettingsFragment"
+            android:label="HomeFragment"
+            tools:layout="@layout/fragment_settings" >
+            <action
+                android:id="@+id/action_settingsFragment_to_accountSettingsFragment"
+                app:destination="@+id/accountSettingFragment"
+                app:enterAnim="@anim/slide_in_right"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+            <action
+                android:id="@+id/action_settingsFragment_to_safeSettingsFragment"
+                app:destination="@+id/safeSettingFragment"
+                app:enterAnim="@anim/slide_in_right"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+            <action
+                android:id="@+id/action_settingsFragment_to_normalSettingsFragment"
+                app:destination="@+id/normalSettingFragment"
+                app:enterAnim="@anim/slide_in_right"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+        </fragment>
+
+        <fragment
+            android:id="@+id/accountSettingFragment"
+            android:label="accountSettingFragment"
+            android:name="com.owen.navigationdemo.AccountSettingsFragment"
+            tools:layout="@layout/fragment_settings_account">
+            <action
+                android:id="@+id/action_acountSetting_to_uploadAvatar"
+                app:destination="@+id/uploadAvatar"
+                app:enterAnim="@anim/slide_in_right"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+        </fragment>
+        <fragment
+            android:id="@+id/safeSettingFragment"
+            android:label="safeSettingFragment"
+            android:name="com.owen.navigationdemo.SafeSettingsFragment"
+            tools:layout="@layout/fragment_settings_safe" />
+        <fragment
+            android:id="@+id/normalSettingFragment"
+            android:label="normalSettingFragment"
+            android:name="com.owen.navigationdemo.NormalSettingsFragment"
+            tools:layout="@layout/fragment_settings_normal" />
+        <fragment
+            android:id="@+id/commonFragment"
+            android:label="CommonFragment"
+            android:name="com.owen.navigationdemo.CommonFragment"
+            tools:layout="@layout/fragment_common" />
+
+        <activity
+            android:id="@+id/uploadAvatar"
+            android:label="UploadAvatar"
+            android:name="com.owen.navigationdemo.UploadAvatarActivity"
+            tools:layout="@layout/activity_upload_avatar" />
+    </navigation>
+
 </navigation>
